Register + fix scrollbar

--- a/Wagering/wwwroot/css/style.css
+++ b/Wagering/wwwroot/css/style.css
@@ -1,5 +1,8 @@
-body{
-    overflow: hidden !important;
+body::-webkit-scrollbar {
+    width: 0 !important
+}
+body {
+    -ms-overflow-style: none;
 }
 
 .has-background-transparent{
